Time: 2 ms (78.68%), Space: 46.5 MB (29.36%) - LeetHub